--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "play": "vite --config playground/vite.config.ts",
     "play:build": "vite build --config playground/vite.config.ts",
     "play:preview": "vite preview --config playground/vite.config.ts",
-    "release:tag": "node -e \"const v=require('./package.json').version; console.log('Tagging v'+v)\" && git tag v$(node -p \"require('./package.json').version\") && git push origin v$(node -p \"require('./package.json').version\")"
+    "release:patch": "npm version patch -m \"release: %s\" && git push --follow-tags",
+    "release:minor": "npm version minor -m \"release: %s\" && git push --follow-tags",
+    "release:major": "npm version major -m \"release: %s\" && git push --follow-tags"
   },
   "exports": {
     ".": {
