--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,59 +1,40 @@
 name: Publish to npm
 
 on:
+  # Publish when you push a version tag like v0.1.0
   push:
     tags:
-      - "v*.*.*" # publish on version tags like v0.2.0
+      - "v*.*.*"
+  workflow_dispatch:
 
 permissions:
   contents: read
+  id-token: write # for npm provenance
 
 jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo (with tags)
+      - name: Checkout
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
-      - name: Setup Node.js
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
           registry-url: https://registry.npmjs.org/
 
-      - name: Install deps
+      - name: Install
         run: npm ci
 
-      # Ensure package.json version matches the git tag, e.g. tag v1.2.3 => version 1.2.3
-      - name: Sync version from tag
-        run: |
-          echo "TAG=${GITHUB_REF_NAME}"               # e.g. v1.2.3
-          VERSION="${GITHUB_REF_NAME#v}"             # strip 'v' -> 1.2.3
-          echo "PKG_VERSION=$VERSION" >> $GITHUB_ENV
-          npm version "$VERSION" --no-git-tag-version
+      - name: Test
+        run: npm run test
 
       - name: Build
         run: npm run build
 
-      - name: Skip if version already exists on npm
-        id: check
-        run: |
-          NAME=$(node -p "require('./package.json').name")
-          set +e
-          npm view "$NAME@${PKG_VERSION}" version >/dev/null 2>&1
-          EXISTS=$?
-          set -e
-          if [ "$EXISTS" -eq 0 ]; then
-            echo "exists=true" >> $GITHUB_OUTPUT
-            echo "Version $NAME@${PKG_VERSION} already published. Skipping."
-          else
-            echo "exists=false" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Publish to npm
-        if: steps.check.outputs.exists == 'false'
+      - name: Publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: npm publish --access public
+          NPM_CONFIG_PROVENANCE: true
+        run: npm publish --access public --provenance
